Add component for adding custom emote
Add icons.tsx for storing svg icons

Fix CSS active on emote

Add test run to deploy script

--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Random emote in ReactJS">
+  <meta name="description" content="Random emote! Add your own custom and save it!">
+  <meta name="keywords" content="Emote,Random">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&family=Roboto:wght@300;400&display=swap"
     rel="stylesheet">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>random-emote-react</title>
+  <title>random emote</title>
 </head>
 
 <body>
-  <div id="root"></div>
-  <noscript>This website doesn't work without JavaScript!</noscript>
+  <div id="root">
+    <noscript>This app doesn't work without JavaScript.</noscript>
+  </div>
 </body>
 
 </html>
