--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" type="image/png">
+  <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/logo192.png" type="image/png">
+  <link rel="apple-touch-icon" sizes="512x512" href="%PUBLIC_URL%/logo512.png" type="image/png">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Random emote! Add your own custom and save it!">
-  <meta name="keywords" content="Emote,Random">
+  <meta name="keywords" content="Emote,Random,ReactJS,PWA">
+
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&family=Roboto:wght@300;400&display=swap"
-    rel="stylesheet">
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 
   <title>random emote</title>
 </head>
 
-<body>
+<body class="system-theme">
   <div id="root">
     <noscript>This app doesn't work without JavaScript.</noscript>
   </div>
