Refactor to use css variable for themes

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <title>random emote</title>
 </head>
 
-<body class="system-theme">
+<body class="auto-theme">
   <div id="root">
     <noscript>This app doesn't work without JavaScript.</noscript>
   </div>
