--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,18 @@
   <link rel="apple-touch-icon" sizes="512x512" href="%PUBLIC_URL%/logo512.png" type="image/png">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Random emote! Add your own custom and save it!">
   <meta name="keywords" content="Emote,Random,ReactJS,PWA">
+  <meta name="description" content="Get random emote!">
+  <meta name="og:description" content="Get random emote!">
+  <meta property="og:url" content="https://kthexiii.github.io/emote-reactjs/">
+  <meta property="og:title" content="Random Emote!" />
+  <meta property="og:image" content="%PUBLIC_URL%/image-card.png" />
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="600">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&family=Roboto:wght@300;400&display=swap"
+    rel="stylesheet">
 
   <title>random emote</title>
 </head>
