--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <meta name="og:description" content="Get random emote!">
   <meta property="og:url" content="https://kthexiii.github.io/emote-reactjs/">
   <meta property="og:title" content="Random Emote!" />
-  <meta property="og:image" content="%PUBLIC_URL%/image-card.png" />
+  <meta property="og:image" content="https://kthexiii.github.io/emote-reactjs/image-card.png" />
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="600">
 
